--- a/pages/education/components/education-item.module.scss
+++ b/pages/education/components/education-item.module.scss
@@ -24,6 +24,8 @@
         text-transform: uppercase;
 
         color: #ffffff;
+        
+        margin-top: 8px;
     }
 
     .educationItemOverview {
