--- a/pages/profile/components/profile-header.module.scss
+++ b/pages/profile/components/profile-header.module.scss
@@ -35,6 +35,7 @@
         text-align: center;
         text-transform: uppercase;
         letter-spacing: 0.02rem;
+        font-size: 1.5rem;
 
         small {
             display: block;
