--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,18 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik:wght@500&display=swap");
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 :root {
   --primary-color: #00b7ef;
   --secondary-color: #060c21;
   --accent-color: #f58026;
+  --error-color: #F44336;
   --bg-color: #3d3833;
   --text-color: #f8f9fa;
-  --font-family-base: 'Montserrat', sans-serif;
-  --font-family-heading: 'Rubik', sans-serif;
+  --font-family-base: "Montserrat", sans-serif;
+  --font-family-heading: "Rubik", sans-serif;
   --line-height-base: 1.428571429;
+  --font-size-base: 1rem;
   --font-size-extra: 2.5rem;
   --font-size-large: 2rem;
   --font-size-medium: 1.5rem;
+
+  --base-border-radius: 4px;
+  --base-border-radius-small: 2px;
+  --base-border-radius-large: 8px;
 }
 
 $font-size-extra: 2.5rem;
@@ -104,13 +110,13 @@ p {
 
 label {
   display: block;
-  margin-bottom: .2em;
+  margin-bottom: 0.2em;
 }
 
 @keyframes fab-pulse {
   0% {
     transform: scale(1);
-    opacity: .4;
+    opacity: 0.4;
   }
 
   70% {
